# game_of_life

./: CMakeLists.txt  README.md
CMake/: CTestCustom.cmake.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  gofSimulator.cpp  golMyFirstApp.cpp  golStillLifes.cpp
src/lib/: CMakeLists.txt  golGameGrid.cpp  golGameGrid.h  golGameOfLife.cpp  golGameOfLife.h
test/: CMakeLists.txt  golGridTest.cpp
